# spotify-fltk

./: CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
src/: colors.hpp  custombox.cpp  custombox.hpp  iconbutton.cpp  iconbutton.hpp  icons.cpp  icons.hpp  imagebutton.cpp  imagebutton.hpp  leftsidepanel.cpp  leftsidepanel.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  mainwindow.cpp  mainwindow.hpp
src/lib/: format.hpp
src/settings/: aboutsettings.cpp  aboutsettings.hpp  applicationsettings.cpp  applicationsettings.hpp  interfacesettings.cpp  interfacesettings.hpp  playlistssettings.cpp  playlistssettings.hpp  settingsdialog.cpp  settingsdialog.hpp  settingstab.cpp  settingstab.hpp  spotifysettings.cpp  spotifysettings.hpp
src/tracklist/: trackcolumn.cpp  trackcolumn.hpp  tracklist.cpp  tracklist.hpp  trackrow.cpp  trackrow.hpp
